[tool.poetry]
name = "autopuller"
version = "0.1.0"
description = ""
authors = ["SergeyKapshuchenko <serg3y1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
